# cli-player

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-deb.sh  pyproject.toml  pyrightconfig.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-checks.yml  release.yml  tests.yml
src/: lib.rs  main.rs  utils.rs
src/audio/: decoder.rs  equalizer_dsp.rs  mod.rs  output.rs  pipeline.rs  resampler.rs
src/cli_music_player/: __init__.py  __main__.py  app.py  config.py  equalizer.py  player.py  queue.py  subsonic.py  utils.py
src/cli_music_player/styles/: app.tcss
src/cli_music_player/widgets/: __init__.py  browser.py  equalizer.py  help.py  lyrics.py  now_playing.py  queue_view.py  search.py  server_mgr.py
src/config/: crypto.rs  mod.rs  models.rs  presets.rs
src/equalizer/: mod.rs
src/player/: engine.rs  mod.rs  state.rs
src/queue/: mod.rs
src/subsonic/: auth.rs  client.rs  error.rs  mod.rs  models.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs
src/tui/widgets/: browser.rs  equalizer.rs  help.rs  lyrics.rs  mod.rs  now_playing.rs  queue_view.rs  search.rs  server_mgr.rs
tests/: README.md  __init__.py  config_tests.rs  equalizer_tests.rs  player_tests.rs  queue_tests.rs  run_all_tests.py  subsonic_tests.rs  test_bug_fixes.py  test_config.py  test_config_old.py  test_equalizer.py  test_equalizer_old.py  test_queue.py  test_subsonic.py
