[package]
name = "cli-music-player"
version = "3.0.0"
edition = "2024"

[dependencies]
# Audio
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "alac", "pcm"] }
cpal = "0.15"
rubato = "0.15"

# HTTP / Async
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

# Misc
rand = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
hostname = "0.4"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "krabhi4"
description = "TUI music player for Navidrome/Subsonic servers"
section = "sound"
priority = "optional"
depends = "libasound2"
assets = [
    ["target/release/cli-music-player", "usr/bin/", "755"],
]
