[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-music-player"
version = "2.0.1"
description = "A terminal-based music player for Navidrome instances"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47",
    "python-mpv>=1.0",
    "requests>=2.31",
    "keyring>=25.0",
    "cryptography>=42.0",
]

[project.scripts]
music-player = "cli_music_player.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cli_music_player = ["styles/*.tcss"]
